# playnft

./: .gitignore  config.nix  flake.nix  playNFT-configuration.nix  playNFT-gce.nix
blog/: default.nix
elm/: abi.js  constants.js  default.nix  detect-provider.min.js  develop.sh  elm-srcs.nix  elm.json  index.html  index.js  rebuild.sh  repl.html  result  update-nix-elm-srcs.sh
elm-todomvc/: result
elm-todomvc/src/: Main.elm
elm.bak/: default.nix.bak  elm-srcs.nix  result
elm.bak/src/: Main.elm
elm/src/: Main.elm  OutsideInfo.elm
elm2/: Main.min.js  constants.js  custom.css  default.nix  elm-srcs.nix  elm.json  index.html
elm2/src/: Main.elm
eth/: .env  default.nix  package.json  yarn.nix
eth/backend/: server.js
eth/contracts/: Site.sol
eth/migrations/: 2_deploy_initial_contracts.js
eth/test/: Site.js
machine/: default.nix
muellshack/: README.md  app.js  app.js.bak  default.nix  package.json  result  yarn.nix
nonode/: abi.js  index.html
purescript/: packages.dhall  spago.dhall
purescript/src/: Main.purs
react/: default.nix  package.json  yarn.nix
react/backend/: server.js
react/src/: App.css  App.js
react/src/abi/: abi.js
react/src/backend/: ethereum.js  solana.js
simple/: default.nix  elm-srcs.nix  elm.json  result
simple/src/: Main.elm
solana/: Cargo.toml
solana/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
web-socket-server/: .env  index.js  package.json  yarn.nix
